# parser

./: .gitignore  CMakeLists.txt  LICENSE
benchmark/: CMakeLists.txt  benchmark-parse.cpp  benchmark-parse.yaml
include/zusi_parser/: lsb.hpp  utils.hpp
parsergen/: CMakeLists.txt  parsergen.cpp
rapidxml-mod/: rapidxml.hpp  zusixml.hpp
test/: CMakeLists.txt  parser_test.cpp  zusi_pfad_test.cpp
xsd/: author.xml.xsd  authority.xml.xsd  expense.xml.xsd  font.xml.xsd  forest.xml.xsd  fpn.xsd  ftd.xsd  gpa.xml.xsd  input.xml.xsd  levelcrossing.xml.xsd  ls3.xsd  material.xml.xsd  material.xsd  platform.xml.xsd  result.xml.xsd  retainingwall.xml.xsd  root_alle_zusi_dateien.xsd  root_author.xml.xsd  root_authority.xml.xsd  root_expense.xml.xsd  root_font.xml.xsd  root_forest.xml.xsd  root_fpn.xsd  root_ftd.xsd  root_gpa.xml.xsd  root_input.xml.xsd  root_levelcrossing.xml.xsd  root_ls3.xsd  root_material.xml.xsd  root_platform.xml.xsd  root_result.xml.xsd  root_retainingwall.xml.xsd  root_rv.fzg.xsd  root_script.xml.xsd  root_shape.xml.xsd  root_signal.xml.xsd  root_signals.xml.xsd  root_st2.xsd  root_st3.xsd  root_timetable.xml.xsd  (+18 more)
